<resources>
    <string name="app_name">Marks\' Caravan and Camping</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_second">Booking</string>
    <string name="title_activity_third">Reservations</string>


//Splash text
    <string name="Splash1_Text">Welcome to Marks\' Caravan and Camping. <br></br> Our goal is your ultimate satisfaction. For each of the sites the pricing is as follows:<br></br></string>
    <string name="Splash2_Text">Please use the buttons below to either book your reservation or display your current reservation.<br></br></string>


//Pricing located here so is easier to change
    <string name="CabinPrice_text">Cabin - £40</string>
    <string name="CaravanPrice_text">Caravan - £30</string>
    <string name="TentPrice_text">Tent - £20</string>


//Park information
    <string name="Lothian_text">This is some text about the Lothian Burn Camping and Caravan Park</string>
    <string name="Bunnel_text">This is some text about the Loch Bunnel Touring Park</string>
    <string name="Tennents_text">This is some text about the Tennents Holiday Park</string>
    <string name="title_activity_test">TestActivity</string>


//Spinner Options Array
    <string-array name="sites_array">
        <item>Lothian Burn Camping and Caravan Park</item>
        <item>Loch Bunnel Touring Park</item>
        <item>Tennents Holiday Park</item>
    </string-array>
    <string name="hello_world">Hello world!</string>

</resources>
