<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Booking"
        android:id="@+id/btnBooking"
        android:layout_marginBottom="42dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="47dp"
        android:layout_marginStart="47dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reservation"
        android:id="@+id/btnReservation"
        android:layout_alignTop="@+id/btnBooking"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="46dp"
        android:layout_marginEnd="46dp" />

    <CheckedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Splash1_Text"
        android:id="@+id/txtSplashIntro"
        android:layout_marginTop="156dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CabinPrice_text"
        android:id="@+id/txtCabinPrice"
        android:layout_below="@+id/txtSplashIntro"
        android:layout_alignLeft="@+id/txtSplashIntro"
        android:layout_alignStart="@+id/txtSplashIntro"
        android:layout_marginTop="17dp" />

    <CheckedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CaravanPrice_text"
        android:id="@+id/txtCaravanPrice"
        android:layout_below="@+id/txtCabinPrice"
        android:layout_alignLeft="@+id/txtCabinPrice"
        android:layout_alignStart="@+id/txtCabinPrice" />

    <CheckedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TentPrice_text"
        android:id="@+id/txtTentPrice"
        android:layout_below="@+id/txtCaravanPrice"
        android:layout_alignLeft="@+id/txtCaravanPrice"
        android:layout_alignStart="@+id/txtCaravanPrice" />

    <CheckedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Splash2_Text"
        android:id="@+id/textView"
        android:layout_below="@+id/txtTentPrice"
        android:layout_alignLeft="@+id/txtTentPrice"
        android:layout_alignStart="@+id/txtTentPrice"
        android:layout_marginTop="24dp"
        android:checked="false" />

</RelativeLayout>
